Fits correctly on mobile now

--- a/app/assets/stylesheets/api/reset.css
+++ b/app/assets/stylesheets/api/reset.css
@@ -1,5 +1,5 @@
  
-html, body, header, nav, h1, a,
+body, header, nav, h1, a,
 ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
 fieldset, iframe, label, input, textarea,
