--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,6 +72,10 @@
 
 /* @import must be at top of file, otherwise CSS will not work */
 
+html {
+    height: 100vh;
+}
+
 
 body {
   overflow-x:hidden;
@@ -81,6 +85,11 @@ font-family: 'Raleway', sans-serif;	/* IE10+ */
 	background:#f8f7f9;
 	min-height:20vh;
 	/*padding-top: 175px;*/
+}
+
+html, body {
+    min-height: 100% !important;
+    height: 100%;
 }
 
 /* SPINNER */
